--- a/blog-details.html
+++ b/blog-details.html
@@ -144,7 +144,7 @@
                 <li><strong>프로젝트 명</strong>: 개인 블로그</li>
                 <li><strong>진행 인원</strong>: 개인</li>
                 <li><strong>프로젝트 기간</strong>: 2022.03.03 - 2022.04.04</li>
-                <li><strong>설명</strong>: 모델1 방식을 이용해 게시판, 갤러리리, 방명록, PDF자료실의 CRUD를 구현한 웹 프로젝트 구현한 블로그 웹 프로젝트</li>
+                <li><strong>설명</strong>: 모델1 방식을 이용해 게시판, 갤러리, 방명록, PDF자료실의 CRUD를 구현한 웹 프로젝트 구현한 블로그 웹 프로젝트</li>
                 <li><strong><i class="bi bi-github"></i> Github</strong>: <a href="https://github.com/Koohyemin/blog" target="_blank">https://github.com/Koohyemin/blog</a></li>
               </ul>
             </div>
