--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <img src="assets/img/project/blog/thumb.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>개인 프로젝트</h4>
-                  <p>모델1 방식을 이용해 게시판, 갤러리리, 방명록, PDF자료실의 CRUD를 구현한 웹 프로젝트
+                  <p>모델1 방식을 이용해 게시판, 갤러리, 방명록, PDF자료실의 CRUD를 구현한 웹 프로젝트
                     구현한 블로그 웹 프로젝트</p>
                   <a href="blog-details.html" title="More Details" class="details-link" style="left:45%;"><i class="bi bi-zoom-in"></i></a>
                 </div>
